# web-scrapper-stdio

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  bandit-report.json  debug_output_comparison.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  pytest_log.txt  requirements-dev.txt  requirements.txt  ruff.toml  wait-for.sh
.github/workflows/: build-test.yml  build.yml  coverage-badge.yml  release.yml  test-on-pr.yml  test.yml
src/: api.py  app_factory.py  app_factory_di.py  async_config.py  async_settings.py  cli.py  config.py  enums.py  logger.py  main.py  mcp_server.py  mcp_server_refactored.py  models.py  output-format-handler.py  output_format_handler.py  scraper.py  settings.py  stdio_server.py  utils.py
src/core/: constants.py
src/dependency_injection/: __init__.py  application_bootstrap.py  di_container.py  service_factory.py
src/interfaces/: __init__.py  browser_factory_interface.py  content_processing_interface.py  scraping_configuration_interface.py  web_scraping_interface.py
src/mcp/: app_factory.py
src/scraper/: __init__.py  async_scrapper.py  scraper_utils.py  scrapper.py  utils.py
src/scraper/anti_detection/: __init__.py  config.py
src/scraper/detection_evasion/: __init__.py
tests/: conftest.py  helpers.py  run_domain_tests.py  run_scraper_test.py  test_anti_detection_implementation.py  test_api.py  test_chunked_processing.py  test_dependency_injection_refactor.py  test_helpers.py  test_integration.py  test_integration_chunked.py  test_intelligent_fallback_refactor.py  test_magic_numbers_elimination.py  test_mcp.py  test_mcp_server.py  test_performance_optimization_analysis.py  test_pydantic_settings_implementation.py  test_retry_strategy_implementation.py  test_scraper.py  test_scraping_config_srp_refactoring.py  test_type_hints_standardization.py  test_utils.py
tests/acceptance/: __init__.py
tests/e2e/: test_mcp_server.py
tests/functional/: test_html_processing.py
tests/integration/: test_intelligent_fallback_integration.py  test_local_scraper.py  test_real_world_fallback.py
tests/security/: test_input_sanitization.py  test_input_validation.py
tests/tools/: test_async_consistency_validator.py  test_mcp_server.py
tests/unit/: __init__.py  test_app_factory.py  test_app_factory_di.py  test_async_config.py  test_async_settings.py  test_html_processor.py  test_logger.py  test_output_format_handler.py  test_settings.py
(+141 files in other folders)
